GET products added and documented
