# server/src/controllers/productsControllers.ts
@@ -3,18 +3,36 @@ import pool from "../database";
 
 class ProductsControllers {
     public async getItems(req: Request, res: Response): Promise<void> {
-        const answer = await pool.query('SELECT * FROM BakeryItems');
+        const answer = await pool.query(`SELECT 
+            BakeryItems.id, 
+            BakeryItems.name, 
+            BakeryItems.description, 
+            BakeryItems.price, 
+            BakeryItems.quantity_available, 
+            CategoriesItems.name AS category
+        FROM BakeryItems
+        JOIN CategoriesItems ON BakeryItems.category = CategoriesItems.id
+        WHERE BakeryItems.quantity_available > 0`);
         res.json(answer);
     }
 
     public async getItem(req: Request, res: Response): Promise<void> {
         const {id} = req.params;
-        const answer = await pool.query('SELECT * FROM Bread WHERE id = ?', [id]);
+        const answer = await pool.query(`SELECT 
+            BakeryItems.id, 
+            BakeryItems.name, 
+            BakeryItems.description, 
+            BakeryItems.price, 
+            BakeryItems.quantity_available, 
+            CategoriesItems.name AS category
+        FROM BakeryItems
+        JOIN CategoriesItems ON BakeryItems.category = CategoriesItems.id
+        WHERE BakeryItems.id = ? AND BakeryItems.quantity_available > 0`, [id]);
         if(answer.length > 0) {
             res.json(answer[0]);
             return;
         }
-        res.status(404).json({'message':'Bread not found!'});
+        res.status(404).json({'message':'Producto no existente en exhibicion!'});
     }
 }
 
